<resources>
    <string name="app_name">Autobiztositas</string>
    <string name="name">Név</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="register">Regisztráció</string>
    <string name="username">Felhasználónév</string>
    <string name="email">E-mail cím</string>
    <string name="pwagain">Jelszó megerősítése</string>
    <string name="cancel">Mégse</string>
    <string name="biztositasaim">Biztosításaim</string>
    <string name="kalkulator">Biztosítás kalkulátor</string>
    <string name="nincsBiztositas">Még nincs biztosításod!</string>
    <string name="surname">Vezetéknév</string>
    <string name="firstname">Keresztnév</string>
    <string name="rendszam">Rendszám</string>
    <string name="evjarat">Évjárat</string>
    <string name="marka">Márka</string>
    <string name="hasznalatJellege">Használat jellege</string>
    <string name="autoTipusa">Autó típusa</string>
    <string name="uzemanyag">Üzemanyag típusa</string>
    <string name="autoModellje">Auto modellje</string>
    <string name="Kmora">Kilóméteróra állása</string>
    <string name="hengerurtartalom">Hengerűrtartalom (cm3)</string>
    <string name="futamido">Futamidő (év)</string>
    <string name="biztositaskezdete">Biztosítás kezdete</string>
    <string name="bonusmalus">Bonus-malus fokozat</string>
    <string name="kalkulalas">Kalkulálás</string>
    <string name="accept">Elfogadás</string>
    <string name="date">Dátum</string>
    <string name="menu">Menu</string>
    <string name="logout">Kijelentkezés</string>
    <string name="cart">Kosár</string>
    <string name="takepicture">Kép készítése</string>
    <string name="rendszam_placeholder">Rendszám: ABC123</string>
    <string name="futamido_placeholder">Futamidő: 12 hónap</string>
    <string name="osszeg_placeholder">Összeg: - Ft</string>
    <string name="karbejelentes">Kárbejelentés</string>
    <string name="gps">GPS bekapcsolása</string>
    <string name="elkuldes">Elküldés</string>
</resources>