<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Kalkulator">

    <LinearLayout
        android:id="@+id/main2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="25dp"
        android:orientation="vertical"
        android:padding="8dp">

        <EditText
            android:id="@+id/RendszamEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/rendszam"
            android:inputType="text" />

        <TextView
            android:id="@+id/EvjaratTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/evjarat"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/EvjaratSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/MárkaTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/marka"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/AutoTipusaSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/tipusaEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/autoModellje"
            android:inputType="text" />

        <TextView
            android:id="@+id/UzemanyagTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/uzemanyag"
            android:textSize="18sp" />


        <Spinner
            android:id="@+id/UzemanyagSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/KmoraEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/Kmora"
            android:inputType="number" />

        <EditText
            android:id="@+id/HengerurtartalomEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/hengerurtartalom"
            android:inputType="number" />


        <TextView
            android:id="@+id/HasznalatJellegeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/hasznalatJellege"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/HasznalatJellegeSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/FutaimidoEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/futamido"
            android:inputType="number" />

        <EditText
            android:id="@+id/KezdetdatumaEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/biztositaskezdete"
            android:inputType="datetime" />

        <TextView
            android:id="@+id/BonusmalusTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/bonusmalus"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/BonusmalusSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:id="@+id/alMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:id="@+id/KalkulalasButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="#1a81e8"
                android:text="@string/kalkulalas" />

            <TextView
                android:id="@+id/KalkulaltTextView"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="85dp"
                android:layout_marginTop="8dp"
                android:text=""
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/alMain2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:id="@+id/ElfogadasButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="#1a81e8"
                android:onClick="accept"
                android:text="@string/accept" />

            <Button
                android:id="@+id/MegseButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="#949494"
                android:onClick="cancel2"
                android:text="@string/cancel" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>