<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPage">


    <TextView
        android:id="@+id/BiztositasaimTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/biztositasaim"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/BiztositasRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BiztositasaimTextView"
        app:layout_constraintVertical_bias="0.144" />

    <TextView
        android:id="@+id/NincsBiztositasTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nincsBiztositas"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BiztositasaimTextView"
        app:layout_constraintVertical_bias="0.239" />

    <Button
        android:id="@+id/KalkulatorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:text="@string/kalkulator"
        android:backgroundTint="#1a81e8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BiztositasRecyclerView"
        app:layout_constraintVertical_bias="0.714" />

    <Button
        android:id="@+id/KarbejelentesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:backgroundTint="#1a81e8"
        android:text="@string/karbejelentes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/KalkulatorButton"
        app:layout_constraintVertical_bias="0.325" />


</androidx.constraintlayout.widget.ConstraintLayout>